# nmprofile-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/libnmprofile/cli/: trait.ProfileCliDirective.js
docs/implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
docs/libnmprofile/: all.html  index.html  sidebar-items.js
docs/libnmprofile/cli/: enum.DownDirective.html  enum.ProfileAction.html  enum.UpDirective.html  index.html  sidebar-items.js  trait.ProfileCliDirective.html
docs/libnmprofile/error/: enum.Error.html  index.html  sidebar-items.js  type.Result.html
docs/libnmprofile/profile/: fn.ethernet_is_connected.html  fn.gen_ethernet_status.html  fn.gen_wifi_status.html  fn.run_command.html  fn.wait_for.html  fn.wifi_is_available.html  fn.wifi_is_connected.html  index.html  sidebar-items.js  trait.Profile.html
docs/libnmprofile/profiles/: index.html  sidebar-items.js
docs/src/libnmprofile/: cli.rs.html  error.rs.html  lib.rs.html  profile.rs.html  profiles.rs.html
python-archive/: pyproject.toml
python-archive/nm_profile/: __init__.py  cli.py  command.py  profile.py
scripts/: build-docs  build-release
src/: cli.rs  error.rs  lib.rs  main.rs  profile.rs  profiles.rs
src/profiles/: wifi.rs
(+10 files in other folders)
